# docs/swagger.yaml
@@ -1,5 +1,25 @@
 basePath: /api/v1
 definitions:
+  models.BracketResponse:
+    properties:
+      bracket_id:
+        type: string
+      created_at:
+        type: string
+      filename:
+        type: string
+      id:
+        type: string
+      is_uploaded:
+        type: boolean
+    type: object
+  models.BracketsResponse:
+    properties:
+      brackets:
+        items:
+          $ref: '#/definitions/models.BracketResponse'
+        type: array
+    type: object
   models.CreateOrderRequest:
     properties:
       metadata:
@@ -315,6 +335,41 @@ paths:
       summary: Get order details
       tags:
       - orders
+  /orders/{order_id}/brackets:
+    get:
+      consumes:
+      - application/json
+      description: Returns a list of all uploaded brackets (raw images) for an order
+      parameters:
+      - description: Order ID (UUID)
+        in: path
+        name: order_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.BracketsResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      security:
+      - Bearer: []
+      summary: Get uploaded brackets
+      tags:
+      - brackets
   /orders/{order_id}/files:
     get:
       consumes:
